run-dev-image adjust/bugfix, gnunicorn bugfix

--- a/flask-docker-1/Dockerfile
+++ b/flask-docker-1/Dockerfile
@@ -4,4 +4,4 @@ COPY ./flaskr /app/flaskr
 RUN apk add bash
 RUN pip install -r ./flaskr/requirements.txt
 EXPOSE 8000
-CMD gunicorn -w 2 -b 0.0.0.0 'app:flaskr'
+CMD gunicorn -w 2 -b 0.0.0.0 'flaskr:create_app()'
