--- a/flask-docker-0/Dockerfile
+++ b/flask-docker-0/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /app
 COPY . /app
 RUN pip install -r requirements.txt
 EXPOSE 8000
-CMD gunicorn -w 2 -b 0.0.0.0 'app:app'
+CMD gunicorn --workers=2 --bind=0.0.0.0:80 'app:app'
