Rename app to flaskapp in flask-docker-1

--- a/flask-docker-1/Dockerfile
+++ b/flask-docker-1/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3-alpine3.15
 WORKDIR /app
-COPY ./flaskr /app/flaskr
+COPY ./flaskapp /app/flaskapp
 RUN apk add bash
-RUN pip install -r ./flaskr/requirements.txt
+RUN pip install -r ./flaskapp/requirements.txt
 EXPOSE 8000
-CMD gunicorn -w 2 -b 0.0.0.0 'flaskr:create_app()'
+CMD gunicorn -w 2 -b 0.0.0.0 'flaskapp:create_app()'
