--- a/flask-docker-2/docker-compose.yml
+++ b/flask-docker-2/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   flaskapp:
@@ -10,6 +9,19 @@ services:
       - 5001:5000
     env_file:
       - ./devel.env
+    depends_on:
+      - db
+
+  db:
+    image: postgres:13
+    volumes:
+      - ./services/db/data:/var/lib/postgresql/data
+    env_file:
+      - ./devel.env
+    environment:
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASS}
+      - POSTGRES_DB=${DB_NAME}
 
 
 # Final
@@ -30,7 +42,7 @@ services:
 #     volumes:
 #       - postgres_data:/var/lib/postgresql/data/
 #     environment:
-#       - POSTGRES_USER=hello_flask
+#       - POSTGRES_USER=${DB_U}
 #       - POSTGRES_PASSWORD=hello_flask
 #       - POSTGRES_DB=hello_flask_dev
 
