Working on productionizing 2

--- a/flask-docker-2/services/app/Dockerfile
+++ b/flask-docker-2/services/app/Dockerfile
@@ -9,4 +9,4 @@ RUN pip install --upgrade pip
 RUN pip install -r flaskapp/requirements.txt
 
 EXPOSE 5000
-CMD gunicorn --workers=2 --bind=0.0.0.0:80 'app:app'
+CMD gunicorn --workers=2 --bind=0.0.0.0:80 'flaskapp:app'
